--- a/app/views/groupclasses/index.erb
+++ b/app/views/groupclasses/index.erb
@@ -1,9 +1,9 @@
 <h3>All classes:</h3>
 
 <%Groupclass.all.each do |groupclass|%>
-   <%spots = groupclass.max_students - groupclass.students.size%>
+   <%spots = groupclass.spots_available%>
    <%status = spots>0?"#{spots} spots available":"FULL!" %>
 <ul>
-<li><a href="/groupclass/<%=groupclass.id%>"><%=groupclass.name%></a> - <%=status%></li>
+<li><a href='/groupclasses/<%=groupclass.id%>/show'><%=groupclass.name%></a> - <%=status%></li>
 </ul>
 <%end%>
