--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,9 +15,10 @@
     <div class="container">
       <h1>Welcome to Island Fitness!</h1>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="/groupclasses/">Group Classes</a>
-          <a class="navbar-brand" href="#">Instructors</a>
+          <a class="navbar-brand" href="/groupclasses">Group Classes</a>
+          <a class="navbar-brand" href="/instructors">Instructors</a>
           <a class="navbar-brand" href="#">Log In</a>
+          <a class="navbar-brand" href="#">Sign Up</a>
       </nav>
       <%= yield %>
     </div>
