--- a/app/views/groupclasses/show.erb
+++ b/app/views/groupclasses/show.erb
@@ -1,5 +1,9 @@
 <h2><%=@groupclass.name%></h2>
-<h4>Instructor: <%=Instructor.find(@groupclass.instructor_id).name%></h4>
+<%instructor = Instructor.find(@groupclass.instructor_id)%>
+<h4>Instructor: <%=instructor.name%></h4>
 <h4>Maximum students: <%=@groupclass.max_students%></h4>
 <h4>Currently signed up <%=@groupclass.students.size%> students </h4>
 <h4>Spots available: <%=@groupclass.spots_available%>
+<%if isInstructor? && current_user==instructor%>
+    <a href="/groupclasses/<%=@groupclass.id%>/edit">Edit Class</a>
+<%end%>
