--- a/app/views/instructors/index.erb
+++ b/app/views/instructors/index.erb
@@ -6,5 +6,5 @@
 <%end%>
 </div>
 <div>
-    <a href ='/logout' color="red">Log Out</a>  
+    <a href ='/groupclasses/new'>Add Class  </a><a href ='/logout'>Log Out</a>  
 </div>
