--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,8 +17,8 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="/groupclasses">Group Classes</a>
           <a class="navbar-brand" href="/instructors">Instructors</a>
-          <a class="navbar-brand" href="#">Log In</a>
-          <a class="navbar-brand" href="#">Sign Up</a>
+          <a class="navbar-brand" href="/students/login">Log In</a>
+          <a class="navbar-brand" href="/students/new">Sign Up</a>
       </nav>
       <%= yield %>
     </div>
