Add class signup feature

--- a/app/views/groupclasses/show.erb
+++ b/app/views/groupclasses/show.erb
@@ -7,4 +7,9 @@
 <br>
 <%if isInstructor? && current_user==instructor%>
     <a href="/groupclasses/<%=@groupclass.id%>/edit">Edit Class</a>
+<%else%>
+    <form method="POST" action="/groupclasses/<%=@groupclass.id%>/signup">
+        <input id="hidden" type="hidden" name="_method" value="patch" />
+        <input type='submit' value='Sign Up'>
+    </form>
 <%end%>
