--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="/groupclasses">Group Classes</a>
           <a class="navbar-brand" href="/instructors">Instructors</a>
-          <a class="navbar-brand" href="/students/login">Log In</a>
+          <a class="navbar-brand" href="/students/show">Students</a>
           <a class="navbar-brand" href="/students/new">Sign Up</a>
       </nav>
       <%= yield %>
