--- a/app/views/groupclasses/index.erb
+++ b/app/views/groupclasses/index.erb
@@ -1,3 +1,8 @@
+<p style="color:red;">
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+</p>
 <h3>All classes:</h3>
 
 <%Groupclass.all.each do |groupclass|%>
