--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,11 +2,14 @@
 <html>
   <head>
     <!-- Required meta tags -->
+    
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
 
     <title>Island Fitness</title>
   </head>
@@ -20,6 +23,12 @@
           <a class="navbar-brand" href="/students/show">Students</a>
           <a class="navbar-brand" href="/students/new">Sign Up</a>
       </nav>
+      <% if flash.has?(:message) %>
+        <div class="alert alert-info">
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+          <%= flash[:message] %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
 
