--- a/app/views/students/new.erb
+++ b/app/views/students/new.erb
@@ -3,21 +3,21 @@
 oninput='password1.setCustomValidity(password1.value != password.value ? "Passwords do not match." : "")'>
 <div >
     <label for="name">Name:</label>
-    <input type="text" name="name" id="name">
+    <input type="text" name="name" id="name" required>
 </div>
 
     <div>
         <label for="email">Email:</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" id="email" required>
     </div>
     
     <div >
         <label for="password">Password:</label>
-        <input type="password" name="password">
+        <input type="password" name="password" required>
     </div>
     <div >
         <label for="password1">Confirm Password:</label>
-        <input type="password" name="password1">
+        <input type="password" name="password1" required>
     </div>
 
 <input type="submit" value="Submit">
