--- a/app/views/groupclasses/edit.erb
+++ b/app/views/groupclasses/edit.erb
@@ -3,7 +3,7 @@
 
   <label for="name">Name</label>
   <input type="text" id="name" name="name" value="<%=@groupclass.name%>" />
-
+ <br>
   <label for="class_type">Type:</label>
         <%ctype=@groupclass.class_type%>
         <select id="class_type" name="class_type">
@@ -12,9 +12,9 @@
             <option value="Barre" <%='selected' if ctype=="Barre"%>>Barre</option>
             <option value="FusionFit" <%='selected' if ctype=="FusionFit"%>>FisionFit</option>
         </select> 
-
+  <br>
   <label for="max_students">Max students</label>
   <input type="text" id="max_students" name="max_students" value="<%=@groupclass.max_students%>" />
-
-  <input type="submit" value="submit" />
+  <br>
+  <input class="btn btn-primary" type="submit" value="Save" />
 </form>
