--- a/app/views/groupclasses/new.erb
+++ b/app/views/groupclasses/new.erb
@@ -20,6 +20,6 @@
         <input type="text" name="max_students">
     </div>
 
-<input type="submit" value="Submit">
+<input class="btn btn-primary" type="submit" value="Submit">
 </form>
 
