--- a/app/views/groupclasses/show.erb
+++ b/app/views/groupclasses/show.erb
@@ -4,9 +4,15 @@
 <h4>Maximum students: <%=@groupclass.max_students%></h4>
 <h4>Currently signed up <%=@groupclass.students.size%> students </h4>
 <h4>Spots available: <%=@groupclass.spots_available%>
-<br>
+<br><br>
+
 <%if is_instructor? && current_user==instructor%>
-    <a href="/groupclasses/<%=@groupclass.id%>/edit">Edit Class</a>
+    <a class="btn btn-primary" href="/groupclasses/<%=@groupclass.id%>/edit">Edit Class</a><br>
+    <br>
+    <form method="POST" action="/groupclasses/<%=@groupclass.id%>/delete">
+        <input id="hidden" type="hidden" name="_method" value="delete" />
+        <input class="btn btn-primary" type='submit' value='Delete'>
+    </form>
 <%elsif @groupclass.students.include?(current_user)%>
     <form method="POST" action="/groupclasses/<%=@groupclass.id%>/cancel">
         <input id="hidden" type="hidden" name="_method" value="patch" />
