Update README.md and spec.md

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,13 +31,9 @@
           </div>
         <% end %>
       <% end %>
-      <% if flash.has?(:message) %>
-        <div class="alert alert-info">
-          <
-          <%= flash[:message] %>
-        </div>
-      <% end %>
+      <div>
       <%= yield %>
+      </div>
     </div>
 
   </body>
