Add jumbotron to index page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,7 @@
-
-<img src='/images/island-fitness.jpg' alt="Island Fitness" title="Island Fitness">
+<div class = "jumbotron">
+<h2>Premier Fitness Center</h2>
+<h3>Now open at a new location</h3>
+<p>123 Diary Rd<br>
+Wailuku, HI 96793</p>
+</div>
 
