Add message for invalid instructor login

--- a/app/views/instructors/show.erb
+++ b/app/views/instructors/show.erb
@@ -2,7 +2,7 @@
     <h2>Welcome, <%=current_user.name%>! </h2>
     <hr>
     <div>
-        <a href ='/groupclasses/new'>Add Class  </a><a href ='/logout'>Log Out</a>  
+        <a href ='/groupclasses/new'>Add Class  </a>&nbsp;&nbsp;<a href ='/logout'>Log Out</a>  
     </div>
     <hr>
     <h4>Your classes:</h4>
