Add instructor pictures

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
 <div class = "jumbotron">
+<img src="/island-fitness.jpg" alt="Island Fitness" align="middle">
 <h2>Premier Fitness Center</h2>
 <h3>Now open at a new location</h3>
 <p>123 Diary Rd<br>
