Fix home page image size and location

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
-<div class = "jumbotron">
-<img src="/island-fitness.jpg" alt="Island Fitness" align="middle">
+<div>
+<img src="/island-fitness.jpg" alt="Island Fitness" style="max-width:50%;height:auto;float:left;margin:10px;">
 <h2>Premier Fitness Center</h2>
 <h3>Now open at a new location</h3>
 <p>123 Diary Rd<br>
