--- a/app/views/groupclasses/new.erb
+++ b/app/views/groupclasses/new.erb
@@ -2,7 +2,7 @@
 <form action='/groupclasses' method = "POST">
 <div >
     <label for="name">Name:</label>
-    <input type="text" name="name" id="name">
+    <input type="text" name="name" id="name" required>
 </div>
 
 <div>
@@ -17,7 +17,7 @@
     
     <div >
         <label for="max_students">Max students:</label>
-        <input type="text" name="max_students">
+        <input type="text" name="max_students" required>
     </div>
 
 <input class="btn btn-primary" type="submit" value="Submit">
