--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,8 +20,12 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="/groupclasses">Group Classes</a>
           <a class="navbar-brand" href="/instructors">Instructors</a>
-          <a class="navbar-brand" href="/students/show">Students</a>
-          <a class="navbar-brand" href="/students/new">Sign Up</a>
+          <a class="navbar-brand" href="/students/show">Students</ai>
+          <%if !logged_in?%>
+            <a class="navbar-brand" href="/students/new">Sign Up</a>
+          <%else%>
+            <a class="navbar-brand" href="/logout">Log Out</a>
+          <%end%>
       </nav>
       <% %w[success danger warning info].each do |key| %>
         <% if flash[key] %>
